# cmake-study

./: .gitignore  README.md
Chapter01_Basics/: CMakeLists.txt
Chapter01_Basics/src/c/: main.c
Chapter02_CoreGrammar/01_01_comment/: CMakeLists.txt
Chapter02_CoreGrammar/01_02_01_variable/: CMakeLists.txt
Chapter02_CoreGrammar/01_02_02_cache_variable/: CMakeLists.txt
Chapter02_CoreGrammar/01_02_03_env_variable/: CMakeLists.txt
Chapter02_CoreGrammar/02_01_message/: CMakeLists.txt
Chapter02_CoreGrammar/02_02_condition/: CMakeLists.txt
Chapter02_CoreGrammar/02_03_list/: CMakeLists.txt
Chapter02_CoreGrammar/02_04_file/: CMakeLists.txt
Chapter02_CoreGrammar/02_05_config/: CMakeLists.txt  version.h.in
Chapter02_CoreGrammar/02_05_config/src/test/: version.h
Chapter02_CoreGrammar/02_06_execute_cmd/: CMakeLists.txt
Chapter03_CMakeLists/01_basic_config/01_project_version/: CMakeLists.txt  version.h.in
Chapter03_CMakeLists/01_basic_config/02_compile_version/: CMakeLists.txt
Chapter03_CMakeLists/01_basic_config/03_compile_option/: CMakeLists.txt
Chapter03_CMakeLists/01_basic_config/04_compile_type/: CMakeLists.txt
Chapter03_CMakeLists/01_basic_config/05_global_macro/: CMakeLists.txt
Chapter03_CMakeLists/02_build_target/01_static_lib/: CMakeLists.txt
Chapter03_CMakeLists/02_build_target/02_executable/: CMakeLists.txt
Chapter03_CMakeLists/02_build_target/02_executable/src/: main.c
Chapter03_CMakeLists/03_install_pack/01_install/: CMakeLists.txt
Chapter03_CMakeLists/03_install_pack/01_install/output/include/math/: add.h
Chapter03_CMakeLists/03_install_pack/01_install/src/math/: add.c
Chapter03_CMakeLists/03_install_pack/02_pack/: CMakeLists.txt
Chapter03_CMakeLists/04_test/: CMakeLists.txt
Chapter03_CMakeLists/04_test/test/: test_add.c
Chapter04_Module/: CMakeLists.txt
Chapter04_Module/src/c/: main.c
Chapter04_Module/src/c/math/add/: CMakeLists.txt
Chapter04_Module/src/c/math/minus/: CMakeLists.txt  minus.c  minus.h
gcc-demo/: README.txt  main.c
